# symphony

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  types.rs
src/cache/: manager.rs  mod.rs
src/db/: mod.rs  models.rs
src/playback/: engine.rs  mod.rs  queue.rs
src/plugin/: manager.rs  mod.rs  traits.rs
src/provider/: local.rs  mock.rs  mod.rs  registry.rs  traits.rs  youtube.rs
src/state/: mod.rs
src/theme/: mod.rs  themes.rs
src/ui/: input.rs  layout.rs  mod.rs
src/ui/components/: mod.rs  player_bar.rs  search.rs  sidebar.rs
src/ui/screens/: albums.rs  artists.rs  help.rs  home.rs  library.rs  mod.rs  playlists.rs  queue.rs  search.rs  settings.rs
