[package]
name = "symphony"
version = "0.1.0"
edition = "2021"
description = "A universal terminal music player with support for multiple providers"
authors = ["Symphony Contributors"]
license = "MIT"
repository = "https://github.com/symphony-player/symphony"
keywords = ["music", "player", "terminal", "tui", "ratatui"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Concurrency
parking_lot = "0.12"

# IDs
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Images in terminal
viuer = "0.9"

# Fuzzy search
fuzzy-matcher = "0.3"

# File system
glob = "0.3"
dirs = "6"

# Audio metadata
symphonia = { version = "0.5", features = ["all"] }

# Plugin system (dynamic loading)
libloading = "0.8"

# Async traits
async-trait = "0.1"

# Random number generation
rand = "0.8"

# Duration formatting
humantime = "2"

[features]
default = ["mock-backend"]
vlc-backend = []
mock-backend = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[lib]
name = "symphony"
path = "src/lib.rs"

[[bin]]
name = "symphony"
path = "src/main.rs"
